objects/ASI_CRM_Call_Detail__c.object
<CustomObject>
    <description>ASI CRM - Call Details. The following countries are using this object: 
-PRJ</description>
    <fields>
        <fullName>ASI_CRM_Activity_Purpose__c</fullName>
        <label>Activity Purpose</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Cust Development</fullName>
                </value>
                <value>
                    <fullName>GMS support</fullName>
                </value>
                <value>
                    <fullName>Join Event</fullName>
                </value>
                <value>
                    <fullName>Info Gathering</fullName>
                </value>
                <value>
                    <fullName>Claim processing</fullName>
                </value>
                <value>
                    <fullName>Goods delivery</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Existing Cust. Relationship building</fullName>
                </value>
                <value>
                    <fullName>Promotion discussion</fullName>
                </value>
                <value>
                    <fullName>Promotion followup</fullName>
                </value>
                <value>
                    <fullName>Mama-san</fullName>
                </value>
                <value>
                    <fullName>Unplanned visit</fullName>
                </value>
                <value>
                    <fullName>WSBS discussion</fullName>
                </value>
                <value>
                    <fullName>Selling space/Menu discussion (Chain)</fullName>
                </value>
                <value>
                    <fullName>Store function</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Activity_Result__c</fullName>
        <label>Activity Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dealed</fullName>
                </value>
                <value>
                    <fullName>Ordered</fullName>
                </value>
                <value>
                    <fullName>Others - Purpose achieved</fullName>
                </value>
                <value>
                    <fullName>Keep -High possibility</fullName>
                </value>
                <value>
                    <fullName>Keep - Mid possibility</fullName>
                </value>
                <value>
                    <fullName>Keep - Low possibility</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Person in charged not available</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Activity_Sub_brand_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Activity Sub-brand 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_MFM_Sub_brand__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>JP CRM Sub-brand</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_Sub_brand__c.ASI_MFM_Active_for_CRM__c</field>
                <operation>notEqual</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>Call Details</relationshipLabel>
        <relationshipName>Call_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Activity_Sub_brand_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Activity Sub-brand 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_MFM_Sub_brand__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>JP CRM Sub-brand</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_Sub_brand__c.ASI_MFM_Active_for_CRM__c</field>
                <operation>notEqual</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>Call Details (Activity Sub-brand 2)</relationshipLabel>
        <relationshipName>Call_Details1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Activity_Sub_brand_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Activity Sub-brand 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_MFM_Sub_brand__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>JP CRM Sub-brand</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_Sub_brand__c.ASI_MFM_Active_for_CRM__c</field>
                <operation>notEqual</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>Call Details (Activity Sub-brand 3)</relationshipLabel>
        <relationshipName>Call_Details2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Actual_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Actual Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Actual_Tax_Amount__c</fullName>
        <formula>ASI_CRM_Actual_Amount__c -  ASI_CRM_Actual_Taxable_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Tax Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Actual_Taxable_Amount__c</fullName>
        <formula>ROUND(IF(ISNULL(ASI_CRM_Actual_Amount__c),0,ASI_CRM_Actual_Amount__c) / (1 +  ASI_CRM_Tax_Rate__c ),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Taxable Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Ad_hoc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ad-hoc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Attendees_BS__c</fullName>
        <label>Attendees BS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Attendees_Other__c</fullName>
        <label>Attendees Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Attendees_PRJ__c</fullName>
        <label>Attendees PRJ</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Call_Plan__c</fullName>
        <label>Call Plan</label>
        <referenceTo>ASI_CRM_Call_Plan__c</referenceTo>
        <relationshipLabel>Call Details</relationshipLabel>
        <relationshipName>Call_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_CRM_AccountsAdditionalField__c.ASI_CRM_CN_Inactive_Flag__c</field>
                <operation>notEqual</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>ASI_CRM_AccountsAdditionalField__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>JP Wholesaler, JP On-Trade Outlet, JP Off-Trade Outlet, JP Bar Supplier</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Call Details</relationshipLabel>
        <relationshipName>Visitation_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Dohan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dohan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Frequency__c</fullName>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ASI_CRM_Pattern__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_G_L_Date__c</fullName>
        <label>G/L Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Interviewee__c</fullName>
        <label>Interviewee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Invoice_No__c</fullName>
        <label>Invoice No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Item_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_MFM_Item_Group__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>JP CRM Item Group</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_Item_Group__c.ASI_CRM_CN_Not_In_Use__c</field>
                <operation>notEqual</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_Item_Group__c</referenceTo>
        <relationshipLabel>Call Details</relationshipLabel>
        <relationshipName>Call_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Item_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_MFM_Item_Group__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>JP CRM Item Group</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_Item_Group__c.ASI_CRM_CN_Not_In_Use__c</field>
                <operation>notEqual</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_Item_Group__c</referenceTo>
        <relationshipLabel>Call Details (Item 2)</relationshipLabel>
        <relationshipName>Call_Details1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Item_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_MFM_Item_Group__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>JP CRM Item Group</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_Item_Group__c.ASI_CRM_CN_Not_In_Use__c</field>
                <operation>notEqual</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_Item_Group__c</referenceTo>
        <relationshipLabel>Call Details (Item 3)</relationshipLabel>
        <relationshipName>Call_Details2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JDE_Document_No__c</fullName>
        <label>JDE Document No.</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JDE_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>JDE Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_All_Attendees__c</fullName>
        <label>All Attendees</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Sync_to_JDE_Date__c</fullName>
        <formula>ASI_CRM_TnE_Detail_No__r.ASI_TnE_ClaimHeader__r.ASI_TnE_Sync_to_JDE_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sync to JDE Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Monthly_Sales_1__c</fullName>
        <label>Monthly Sales 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Monthly_Sales_2__c</fullName>
        <label>Monthly Sales 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Monthly_Sales_3__c</fullName>
        <label>Monthly Sales 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Number_of_Attendees_BS__c</fullName>
        <label>Number of Attendees BS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Number_of_Attendees_Other__c</fullName>
        <label>Number of Attendees Other</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Number_of_PRJ_Other_Attendees__c</fullName>
        <label>Number of PRJ Other Attendees</label>
        <summaryFilterItems>
            <field>ASI_CRM_Employee_Attendee__c.ASI_CRM_Department_Code__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_CRM_Employee_Attendee__c.ASI_CRM_Call_Detail__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Number_of_PRJ_Sales_Attendees__c</fullName>
        <label>Number of PRJ Sales Attendees</label>
        <summaryFilterItems>
            <field>ASI_CRM_Employee_Attendee__c.ASI_CRM_Department_Code__c</field>
            <operation>equals</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_CRM_Employee_Attendee__c.ASI_CRM_Call_Detail__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Number_of_SKU1_Consumed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Item 1 Consumed</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Number_of_SKU2_Consumed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Item 2 Consumed</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Number_of_SKU3_Consumed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Item 3 Consumed</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Original_Call_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Call Detail</label>
        <referenceTo>ASI_CRM_Call_Detail__c</referenceTo>
        <relationshipLabel>Call Details</relationshipLabel>
        <relationshipName>Call_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Pattern__c</fullName>
        <label>Pattern</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Pay_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pay To</label>
        <referenceTo>ASI_CRM_Pay_To__c</referenceTo>
        <relationshipLabel>Call Details</relationshipLabel>
        <relationshipName>Call_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Payment_Date__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Payment_Option__c</fullName>
        <label>Payment Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>DC Card</fullName>
                </value>
                <value>
                    <fullName>DC Card(Mgr.)</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Planned_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Planned Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Price_of_SKU1__c</fullName>
        <label>Price of Item 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Price_of_SKU2__c</fullName>
        <label>Price of Item 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Price_of_SKU3__c</fullName>
        <label>Price of Item 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Qty_of_Bottles_Consumed_Total__c</fullName>
        <formula>ASI_CRM_Number_of_SKU1_Consumed__c +  ASI_CRM_Number_of_SKU2_Consumed__c + ASI_CRM_Number_of_SKU3_Consumed__c</formula>
        <label>Quantity of Bottles Consumed (Total)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Reject_Reason__c</fullName>
        <label>Reject Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Reminder_Id__c</fullName>
        <label>Reminder Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Repeat_End_Date__c</fullName>
        <label>Repeat End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Standard_Cost__c</fullName>
        <formula>(ASI_CRM_Actual_Taxable_Amount__c - (IF(ISBLANK(ASI_CRM_Price_of_SKU1__c), 0, ASI_CRM_Price_of_SKU1__c) * IF(ISBLANK(ASI_CRM_Number_of_SKU1_Consumed__c), 0, ASI_CRM_Number_of_SKU1_Consumed__c) + IF(ISBLANK(ASI_CRM_Price_of_SKU2__c), 0, ASI_CRM_Price_of_SKU2__c) * IF(ISBLANK(ASI_CRM_Number_of_SKU2_Consumed__c), 0, ASI_CRM_Number_of_SKU2_Consumed__c) + IF(ISBLANK(ASI_CRM_Price_of_SKU3__c), 0, ASI_CRM_Price_of_SKU3__c) * IF(ISBLANK(ASI_CRM_Number_of_SKU3_Consumed__c), 0, ASI_CRM_Number_of_SKU3_Consumed__c))) /  ASI_CRM_Total_Number_of_Attendees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Standard Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Planned</fullName>
                </value>
                <value>
                    <fullName>Achieved</fullName>
                </value>
                <value>
                    <fullName>TnE Created</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sys_Call_Plan_TnE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sys_Call Plan (TnE)</label>
        <referenceTo>ASI_CRM_Call_Plan__c</referenceTo>
        <relationshipLabel>Call Details for TnE Creation</relationshipLabel>
        <relationshipName>Call_Details_TnE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sys_Is_Real_Time_Print__c</fullName>
        <formula>ASI_CRM_Call_Plan__r.ASI_CRM_Sys_Is_Real_Time_Print__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sys_Is Real Time Print</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Tax_Rate_Area__c</fullName>
        <label>Tax Rate/Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CP0</fullName>
                </value>
                <value>
                    <fullName>CP8</fullName>
                </value>
                <value>
                    <fullName>CP8R</fullName>
                </value>
                <value>
                    <fullName>CP10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Tax_Rate__c</fullName>
        <label>Tax Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Tax_Routing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Routing</label>
        <referenceTo>ASI_JP_TnE_Expense_Classification__c</referenceTo>
        <relationshipName>Visitation_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TnE_Detail_No__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TnE Detail No.</label>
        <referenceTo>ASI_TnE_ClaimDetail__c</referenceTo>
        <relationshipName>Visitation_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Number_of_Attendees__c</fullName>
        <formula>IF(ISNULL(ASI_CRM_Number_of_PRJ_Sales_Attendees__c), 0, ASI_CRM_Number_of_PRJ_Sales_Attendees__c) +
IF(ISNULL(ASI_CRM_Number_of_Attendees_BS__c), 0, ASI_CRM_Number_of_Attendees_BS__c) +
IF(ISNULL(ASI_CRM_Number_of_Attendees_Other__c), 0, ASI_CRM_Number_of_Attendees_Other__c)</formula>
        <label>Total Number of Attendees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Visit_Date_Formula__c</fullName>
        <formula>DATEVALUE( ASI_CRM_Visit_Date_From__c )</formula>
        <label>Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Visit_Date_From__c</fullName>
        <label>Visit Date (From)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Visit_Date_To__c</fullName>
        <label>Visit Date (To)</label>
        <type>DateTime</type>
    </fields>
    <label>Call Detail</label>
    <listViews>
        <fullName>ASI_CRM_JP_Invoice_Call_for_Review</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Status__c</columns>
        <columns>ASI_CRM_Reject_Reason__c</columns>
        <columns>ASI_CRM_Payment_Date__c</columns>
        <columns>ASI_CRM_Invoice_No__c</columns>
        <columns>ASI_CRM_Invoice_Date__c</columns>
        <columns>ASI_CRM_Pay_To__c</columns>
        <columns>ASI_CRM_G_L_Date__c</columns>
        <columns>ASI_CRM_Tax_Routing__c</columns>
        <columns>ASI_CRM_Customer__c</columns>
        <columns>ASI_CRM_Visit_Date_Formula__c</columns>
        <columns>ASI_CRM_Activity_Sub_brand_1__c</columns>
        <columns>ASI_CRM_Actual_Amount__c</columns>
        <columns>ASI_CRM_Standard_Cost__c</columns>
        <columns>ASI_CRM_Call_Plan__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_CRM_Payment_Option__c</field>
            <operation>equals</operation>
            <value>Invoice</value>
        </filters>
        <filters>
            <field>ASI_CRM_Status__c</field>
            <operation>equals</operation>
            <value>Achieved</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Call_Detail__c.ASI_CRM_JP_Call_Result_Detail_Invoice</value>
        </filters>
        <label>JP Invoice Call for Review</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_JP_Accounting</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CDN{00000000}</displayFormat>
        <label>Call Detail Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Details</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_JP_Call_Plan_Detail</fullName>
        <active>true</active>
        <label>JP Call Plan Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_JP_Call_Plan_Detail_Repeat</fullName>
        <active>true</active>
        <label>JP Call Plan Detail Repeat</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_JP_Call_Plan_Detail_Repeat_Settings</fullName>
        <active>true</active>
        <label>JP Call Plan Detail Repeat Settings</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_JP_Call_Result_Detail</fullName>
        <active>true</active>
        <label>JP Call Result Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_JP_Call_Result_Detail_Invoice</fullName>
        <active>true</active>
        <label>JP Call Result Detail Invoice</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_JP_Call_Result_Detail_Locked</fullName>
        <active>true</active>
        <label>JP Call Result Detail Locked</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_JP_Call_Result_Detail_Repeat</fullName>
        <active>true</active>
        <label>JP Call Result Detail Repeat</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ASI_CRM_JP_Actual_Amount_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>((ASI_CRM_Actual_Amount__c &lt; 0)||
ASI_CRM_Actual_Amount__c &lt; (
IF( ISNULL(ASI_CRM_Price_of_SKU1__c),0, ASI_CRM_Price_of_SKU1__c) * 
IF( ISNULL(ASI_CRM_Number_of_SKU1_Consumed__c),0, ASI_CRM_Number_of_SKU1_Consumed__c) +
IF( ISNULL(ASI_CRM_Price_of_SKU2__c),0, ASI_CRM_Price_of_SKU2__c) * 
IF( ISNULL(ASI_CRM_Number_of_SKU2_Consumed__c),0, ASI_CRM_Number_of_SKU2_Consumed__c)
+
IF( ISNULL(ASI_CRM_Price_of_SKU3__c),0, ASI_CRM_Price_of_SKU3__c)
* 
IF( ISNULL(ASI_CRM_Number_of_SKU3_Consumed__c),0, ASI_CRM_Number_of_SKU3_Consumed__c))) &amp;&amp; (CONTAINS(RecordType.DeveloperName, &quot;ASI_CRM_JP_Call_Result_Detail&quot;) &amp;&amp; ISPICKVAL( ASI_CRM_Status__c , &quot;Achieved&quot;))</errorConditionFormula>
        <errorDisplayField>ASI_CRM_Actual_Amount__c</errorDisplayField>
        <errorMessage>Actual Amount cannot be less that 0, or less than the sum of item expenses 1, 2 and 3</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_JP_Adhoc_After_Approved</fullName>
        <active>true</active>
        <errorConditionFormula>ISNEW() &amp;&amp; RecordType.DeveloperName=&apos;ASI_CRM_JP_Call_Plan_Detail&apos; &amp;&amp;   ASI_CRM_Call_Plan__r.RecordType.DeveloperName = &apos;ASI_CRM_JP_Call_Plan_Locked&apos; &amp;&amp;  !ASI_CRM_Ad_hoc__c</errorConditionFormula>
        <errorDisplayField>ASI_CRM_Ad_hoc__c</errorDisplayField>
        <errorMessage>You can only create Ad-hoc Call Details after Call Plan is approved or planned.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_JP_Change_Status_With_TnE_Detail</fullName>
        <active>true</active>
        <errorConditionFormula>OR(RecordType.DeveloperName = &quot;ASI_CRM_JP_Call_Result_Detail_Locked&quot;, RecordType.DeveloperName = &quot;ASI_CRM_JP_Call_Result_Detail_Repeat_Locked&quot;) &amp;&amp;  ISPICKVAL(ASI_CRM_Status__c, &apos;Planned&apos;) &amp;&amp; NOT(ISBLANK(ASI_CRM_TnE_Detail_No__c))</errorConditionFormula>
        <errorDisplayField>ASI_CRM_Status__c</errorDisplayField>
        <errorMessage>Status is not allowed to change after TnE Detail number has been assigned.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_JP_Final_Invoice_Call_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>/* Prevent user to change Invoice Call to Final 

Criteria: 
* Record Type match Call Detail paid by Invoice 
* Status is changed to Final 
* Bypass accounting role
* Bypass Administrator Profile from Custom Setting 
*/ 

RecordType.DeveloperName =&apos;ASI_CRM_JP_Call_Result_Detail_Invoice&apos; &amp;&amp; ISPICKVAL(ASI_CRM_Status__c, &apos;Final&apos;) &amp;&amp; !CONTAINS($UserRole.DeveloperName,&apos;ASI_JP_Accounting&apos;)
&amp;&amp;
!AND(CONTAINS($Setup.ASI_JP_Validation_Bypass__c.ASI_JP_Object_API__c, &apos;ASI_CRM_Call_Detail__c&apos; ), ISBLANK( $Setup.ASI_JP_Validation_Bypass__c.ASI_JP_Record_Type__c ))</errorConditionFormula>
        <errorDisplayField>ASI_CRM_Status__c</errorDisplayField>
        <errorMessage>You are not allowed to change status to Final</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_JP_GL_Date</fullName>
        <active>true</active>
        <errorConditionFormula>(CONTAINS(RecordType.DeveloperName,&apos;ASI_CRM_JP&apos;) &amp;&amp; ISCHANGED(ASI_CRM_G_L_Date__c) &amp;&amp; OR (MONTH(ASI_CRM_G_L_Date__c) &lt; MONTH(TODAY()) &amp;&amp; YEAR(ASI_CRM_G_L_Date__c) = YEAR(TODAY()), YEAR(ASI_CRM_G_L_Date__c) &lt; YEAR(TODAY())))</errorConditionFormula>
        <errorDisplayField>ASI_CRM_G_L_Date__c</errorDisplayField>
        <errorMessage>Only G/L Date in current month or future date is allowed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_JP_Invoice_Field_Lock</fullName>
        <active>true</active>
        <errorConditionFormula>/* Prevent Sales update Invoice No./Date and Payment Date for call details paid by Invoice after achievement. 

Criteria: 
* Record Type match all Call Detail Result Invoice
* Payment Date, Invoice Date and Invoice No., any of them is changed
* Bypass Accounting
*/ 

RecordType.DeveloperName = &quot;ASI_CRM_JP_Call_Result_Detail_Invoice&quot; &amp;&amp; ( ISCHANGED( ASI_CRM_Payment_Date__c ) || ISCHANGED(ASI_CRM_Invoice_No__c) || ISCHANGED(ASI_CRM_Invoice_Date__c) ) &amp;&amp; !CONTAINS($UserRole.DeveloperName,&apos;ASI_JP_Accounting&apos;)</errorConditionFormula>
        <errorMessage>You are not allowed to change Payment Date, Invoice Date and Invoice No. after achieved</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_JP_Item1_Consumed_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>CONTAINS(RecordType.DeveloperName, &quot;ASI_CRM_JP&quot;) &amp;&amp; 
NOT(!ISBLANK(ASI_CRM_Item_1__c) &amp;&amp;  ASI_CRM_Number_of_SKU1_Consumed__c &gt; 0 &amp;&amp;  ASI_CRM_Price_of_SKU1__c &gt;= 0) &amp;&amp;

NOT((ASI_CRM_Number_of_SKU1_Consumed__c = 0 ||  ISBLANK(ASI_CRM_Number_of_SKU1_Consumed__c) ) &amp;&amp;   ISBLANK(ASI_CRM_Price_of_SKU1__c ) )</errorConditionFormula>
        <errorDisplayField>ASI_CRM_Price_of_SKU1__c</errorDisplayField>
        <errorMessage>You are not allowed to specify the item price if you did not consume it. But if you consumed it, you are required to input the price.</errorMessage>
    </validationRules>
</CustomObject>